--- a/TestMasGlobal.Services/Web.config
+++ b/TestMasGlobal.Services/Web.config
@@ -9,7 +9,7 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="WebApi" value="http://masglobaltestapi.azurewebsites.net/api/Employees"/>
+    <add key="WebApiUrl" value="http://masglobaltestapi.azurewebsites.net/api/Employees"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
